--- a/meteor/src/meteor.UI/Resources/Fonts.axaml
+++ b/meteor/src/meteor.UI/Resources/Fonts.axaml
@@ -7,5 +7,6 @@
     <FontFamily x:Key="SanFranciscoMono">/Common/Assets/Fonts/SanFrancisco/SF-Mono-Regular.otf#SF Mono</FontFamily>
     <FontFamily x:Key="SanFranciscoMonoMedium">/Common/Assets/Fonts/SanFrancisco/SF-Mono-Medium.otf#SF Mono</FontFamily>
     <FontFamily x:Key="SanFranciscoItalic">/Common/Assets/Fonts/SanFrancisco/SF-Pro-Display-RegularItalic.otf#SF Pro Display</FontFamily>
-
+    <FontFamily x:Key="FontAwesomeSolid">/Common/Assets/Fonts/FontAwesome/Font Awesome 6 Free-Solid-900.otf#Font Awesome 6 Free</FontFamily>
+    <FontFamily x:Key="FontAwesomeRegular">/Common/Assets/Fonts/FontAwesome/Font Awesome 6 Free-Regular-400.otf#Font Awesome 6 Free</FontFamily>
 </ResourceDictionary>
