--- a/meteor/src/meteor.UI/Resources/Styles/TabViewStyles.axaml
+++ b/meteor/src/meteor.UI/Resources/Styles/TabViewStyles.axaml
@@ -16,7 +16,7 @@
         <DataTemplate x:Key="TabItemTemplate" x:DataType="viewModels1:TabViewModel">
             <Border x:Name="MainBorder"
                     BorderBrush="{Binding DataContext.CurrentTheme, RelativeSource={RelativeSource AncestorType=UserControl}, Converter={StaticResource ThemeToBorderBrushConverter}}"
-                    Background="{Binding DataContext.CurrentTheme, RelativeSource={RelativeSource AncestorType=UserControl}, Converter={StaticResource ThemeToBackgroundConverter}}"
+                    Background="{Binding IsActive, Converter={StaticResource IsActiveToBrushConverter}}"
                     BorderThickness="0 0 1 0"
                     Padding="14 4 2 4" behaviors:MiddleTabClickBehavior.CloseCommand="{Binding CloseTabCommand}"
                     behaviors:MiddleTabClickBehavior.CloseCommandParameter="{Binding}">
